--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
-    "next-auth": "^5.0.0-beta.22",
+  "next-auth": "^4.24.7",
     "oidc-token-hash": "^5.0.3",
     "openid-client": "^6.1.6",
     "or": "^0.2.0",
