--- a/.env
+++ b/.env
@@ -1,9 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-NEXTAUTH_SECRET="0WpuG4teyxtVjerbAlKMX29qW/6sfD4pGZs/thvIzts="
+AUTH_SECRET="cjonjEj8aOHTDLtZbe4T/Vm8IFe3Us2Z2ZzPSelVtkA=" 
 
 
 DATABASE_URL="postgresql://neondb_owner:48vLEkMbUFgN@ep-delicate-frost-a5jqwskn.us-east-2.aws.neon.tech/neondb?sslmode=require"
